@@ -44,9 +44,16 @@
 void serv_login(struct aim_user *user)
 {
 	struct prpl *p = find_prpl(user->protocol);
+	
 	if (user->gc != NULL)
 		return;
+
 	if (p && p->login) {
+		if (!strlen(user->password) && !(p->options & OPT_PROTO_NO_PASSWORD)) {
+			do_error_dialog(_("Please enter your password"), _("Signon Error"));
+			return;
+		}
+
 		debug_printf("Logging in using %s\n", (*p->name)());
 		(*p->login)(user);
 	} else {
